--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+
+<table>
+  <tr>
+	  <thead> 
+			    <th>Roll number</th>
+			    <th>Name</th>
+		</thead>
+  </tr>
+  <tr> <tbody>
+    <td>1</td>
+    <td>Gurpret</td>
+				 <tr>
+				<td>2</td>
+			    <td>harpreet</td>			 
+			 </tr> 
+	  
+    </tbody>
+  </tr>
+</table>
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
